--- a/vm/Vagrantfile
+++ b/vm/Vagrantfile
@@ -54,10 +54,15 @@ Vagrant::Config.run do |config|
   # #               Managed by Puppet.\n"
   # # }
   #
-  # config.vm.provision :puppet do |puppet|
-  #   puppet.manifests_path = "manifests"
-  #   puppet.manifest_file  = "precise32.pp"
-  # end
+
+  # JJ: http://stackoverflow.com/questions/16011294/vagrant-puppet-provisioning-failing
+  config.vm.provision :shell, :inline => "apt-get update --fix-missing"
+  config.vm.provision :puppet do |puppet|
+  puppet.manifests_path = "manifests"
+   puppet.options = "--verbose --debug"
+   puppet.manifest_file  = "precise32.pp"
+  end
+  config.vm.provision :shell, :path => "bash/install-lein.sh"
 
   # Enable provisioning with chef solo, specifying a cookbooks path, roles
   # path, and data_bags path (all relative to this Vagrantfile), and adding 
