--- a/vm/Vagrantfile
+++ b/vm/Vagrantfile
@@ -56,7 +56,7 @@ Vagrant::Config.run do |config|
   #
 
   # JJ: http://stackoverflow.com/questions/16011294/vagrant-puppet-provisioning-failing
-  config.vm.provision :shell, :inline => "apt-get update --fix-missing"
+  config.vm.provision :shell, :inline => "apt-get update -q --fix-missing"
   config.vm.provision :puppet do |puppet|
   puppet.manifests_path = "manifests"
    puppet.options = "--verbose --debug"
