--- a/vm/Vagrantfile
+++ b/vm/Vagrantfile
@@ -8,6 +8,8 @@ Vagrant::Config.run do |config|
 
   # Every Vagrant virtual environment requires a box to build off of.
   config.vm.box = "precise32"
+  
+  config.vm.customize ["modifyvm", :id, "--memory", 1024]
 
   # The url from where the 'config.vm.box' box will be fetched if it
   # doesn't already exist on the user's system.
